--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/mountain-part-2-svgrepo-com.svg" type="x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>ielmn - Everest</title>
 </head>
 <body>
 
